# predictionMarketExploro

./: .gitignore  README.md  pyproject.toml
Kalshi/api_explore/: getb.py  main.py
Kalshi/kalshi_fees/: maker_fee.py  taker_fee.py  total_revenue_distribution.py
Kalshi/summaryStats/: analyze_markets.py  analyze_trades.py  comboPagination.py  kalshi_markets_metadata.json  merge_trades.py  one_by_one.py  pagination_combo_cursor.json  totalMarketPagination.py  tradesPagination.py
Kalshi/visualizations/contracts_per_trade/: contracts_per_trade_query.py  contracts_per_trade_vis.py
Kalshi/visualizations/implied_probability/: imp_prob_query.py  imp_prob_vis.py
Kalshi/visualizations/market_bands/: mkt_query.py  mkt_vis.py
Kalshi/visualizations/overall_stats/: overall_query.py  overall_vis.py
Kalshi/visualizations/sports/: sports_query.py  sports_vis.py
Kalshi/visualizations/total_fee_rev_calc/: a_bunch_of_fee_rev_query.py  fee_rev_query.py  fee_rev_vis.py  jensons_ineq.py
Polymarket/duneExploro/: mnthly_volume_by_prob.sql  pnl.py  pnl_query.sql
