[project]
name = "predictionmarkets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "dune-client>=1.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
